Realização dos exercícios de Java em Swing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /HelloWorldSwing/nbproject/private/
 /HelloWorldSwing/build/
+/RelogioSwing/nbproject/private/
+/RelogioSwing/build/
+/LocalSwing/nbproject/private/
+/LocalSwing/build/
+/ResolucaoDisplaySwing/nbproject/private/
+/ResolucaoDisplaySwing/build/
